--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,8 @@
 .list-item {
-    display: inline-block;
-    margin-left: 1%;
+    border: none;
+    padding-left: 40px;
+}
+
+.item-text{
+    margin: 0 20px;
 }
